[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gated-attention-gcn"
version = "0.1.0"
description = "Gated-attention graph convolutional networks for SMART-DS anomaly classification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "torch>=2.0",
    "matplotlib>=3.6",
    "pandas>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

